fix(layout): swap 16:9 and 21:9 definitions based on user feedback

--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
       <div class="form-group">
         <label>布局模式 / Layout Mode</label>
         <select id="input-ratio" class="form-control">
-          <option value="219" selected>Cinematic (21:9 - 默认)</option>
-          <option value="169">Fullscreen (16:9 - 全屏)</option>
+          <option value="169" selected>Standard (16:9 - 默认遮罩)</option>
+          <option value="219">Immersive (21:9 - 铺满全屏)</option>
         </select>
       </div>
 
