feat: add Just Chatting layout mode with side panel arrangement

--- a/index.html
+++ b/index.html
@@ -309,10 +309,11 @@
       </div>
 
       <div class="form-group">
-        <label>画面比例 / Aspect Ratio</label>
+        <label>画面布局 / Layout Mode</label>
         <select id="input-ratio" class="form-control">
-            <option value="21:9">21:9 (全宽铺满 / Full Width)</option>
-            <option value="16:9">16:9 (标准居中 / Centered)</option>
+            <option value="21:9">21:9 游戏 (铺满 / Full Width)</option>
+            <option value="16:9">16:9 游戏 (居中 / Centered)</option>
+            <option value="chat">杂谈模式 (两侧布局 / Chat Mode)</option>
         </select>
       </div>
 
