feat: 添加 16:9 左对齐选项，优化布局和样式

--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             <option value="16:9">🖥️ 16:9 Standard</option>
           </select>
         </div>
+        <div class="toggle-group">
+          <div class="toggle-row" id="row-left-align-169" style="display: none;">
+            <span class="toggle-label">↔️ 16:9 左对齐留白</span>
+            <label class="switch">
+              <input type="checkbox" id="input-left-align-169">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
         <div class="subsection-title">信息模块</div>
         <div class="toggle-group">
           <div class="toggle-row">
