--- a/overlay.html
+++ b/overlay.html
@@ -7,7 +7,7 @@
   <!-- 科技风格字体 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Google+Sans:wght@400;500;700&family=Google+Sans+Mono&display=swap" rel="stylesheet">
   
   <!-- Style Loader -->
   <link rel="stylesheet" href="./src/styles/main.css">
